--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</a>
 		</div>
 		<div class="hero-image scroll-reveal">
-			<img src="assets/foto.jpg" alt="profile">
+			<img src="assets/profile.jpg" alt="profile">
 		</div>
 	</section>
 	<!-- skills section -->
